<resources>
    <string name="app_name">ServiceUp</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_button">Log in</string>
    <string name="login_error_password">Invalid username or password.</string>
    <string name="signup_error_passwords">Check both passwords. </string>
    <string name="signup_error_password">Password must contain at least 6 characters.</string>
    <string name="signUp_ErrorMessage">You must fill in all of the fields and check for username </string>
    <string name="signUp_button">Sign Up</string>
    <string name="signUp_username">Username*</string>
    <string name="signUp_password">Password*</string>
    <string name="signUp_repeatPassword">Repeat Password*</string>
    <string name="signUp_firstName">First Name*</string>
    <string name="signUp_lastName">Last Name*</string>
    <string name="signUp_passwordTip">Choose a strong password (At least 6 characters)</string>
    <string name="signUp_passwordErrorMessage">Passwords do not match</string>
    <string name="signUp_phoneNumber">Phone Number</string>
    <string name="signUp_address">Address*</string>
    <string name="signUp_city">City*</string>
    <string name="signUp_state">State*</string>
    <string name="signUp_zipCode">Zip Code*</string>
    <string name="signUp_jobTitle">Profession*</string>
    <string name="menu_signOut">Sign out</string>
    <string name="menu_search">Search</string>
    <string name="nav_contactProvider">Contact My Provider</string>
    <string name="nav_map">Map</string>
    <string name="nav_list_a_service">List a service</string>
    <string name="nav_serviceCart">Service Cart</string>
    <string name="nav_review_a_service">Review a service</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_about">About</string>
    <string name="nav_project_info">Project Info</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repeatPassword">Repeat Password</string>
    <string name="firstName">First Name*</string>
    <string name="lastName">Last Name*</string>
    <string name="address">Address*</string>
    <string name="city">City*</string>
    <string name="state">State*</string>
    <string name="zipCode">Zip Code*</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="save">Save</string>
    <string name="listProfession">Profession</string>
    <string name="listDescription">Description</string>
    <string name="listRate">Amount per hour</string>

</resources>
